--- a/static/css/front.css
+++ b/static/css/front.css
@@ -1,15 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+@import url(https://fonts.googleapis.com/css?family=Raleway);
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Raleway";
+  
 }
 
 body,
 input {
-  font-family: "Poppins", sans-serif;
+  font-family: "Raleway";
 }
 
 .container {
