--- a/templates/index.html
+++ b/templates/index.html
@@ -21,36 +21,44 @@
 	<div class="container">
 		<div class="forms-container">
 			<div class="signin-signup">
-				<form action="#" class="sign-in-form">
-					<h2 class="title">Login</h2>
-					<div class="input-field">
-						<i class="fas fa-user"></i>
-						<input type="text" placeholder="Username" />
-					</div>
-					<div class="input-field">
-						<i class="fas fa-lock"></i>
-						<input type="password" placeholder="Password" />
-					</div>
-					<input type="submit" value="Login" class="btn solid" />
-					
-				</form>
-				<form action="#" class="sign-up-form">
-					<h2 class="title">Sign up</h2>
-					<div class="input-field">
-						<i class="fas fa-user"></i>
-						<input type="text" placeholder="Username" />
-					</div>
-					<div class="input-field">
-						<i class="fas fa-envelope"></i>
-						<input type="email" placeholder="Email" />
-					</div>
-					<div class="input-field">
-						<i class="fas fa-lock"></i>
-						<input type="password" placeholder="Password" />
-					</div>
-					<input type="submit" class="btn" value="Sign up" />
-					
-				</form>
+				<form action="#" class="sign-in-form" method="POST">
+                    {% csrf_token %}
+                    <h2 class="title">Login</h2>
+                    <div class="input-field">
+                        <i class="fas fa-user"></i>
+                        <input type="text" placeholder="Username" name="username" required>
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" placeholder="Password" name="password" required>
+                    </div>
+                    <input type="submit" value="Login" class="btn solid">
+                </form>
+
+				<form action="{% url 'signup' %}" class="sign-up-form" method="POST">
+                    {% csrf_token %}
+                    <h2 class="title">Sign up</h2>
+                    <div class="input-field">
+                        <i class="fas fa-user"></i>
+                        <input type="text" placeholder="Username" name="username" required>
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-envelope"></i>
+                        <input type="email" placeholder="Email" name="email" required>
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" placeholder="Password" name="password" required>
+                        
+                    </div>
+
+                    <div class="input-field">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" placeholder="Confirm password" name="password2" required>
+                        
+                    </div>
+                    <input type="submit" class="btn" value="Sign up">
+                </form>
 			</div>
 		</div>
 
