Fixed search page

--- a/static/css/find.css
+++ b/static/css/find.css
@@ -1,11 +1,13 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+
 body {
     text-align: center;
     min-height: 93vh;
     background-color: #b8c6db;
+    font-family: "Raleway";
   }
   
   h1 {
-    font-family: 'Montserrat', sans-serif;
     color: #fff;
   }
   
@@ -98,5 +100,64 @@ section {
   box-shadow: 1px 1px 8px 0 grey;
   margin-top: 90px;
   background-color: #2b5cd8;
-  height: 170px;
+  height: 210px;
+}
+
+
+.button-3d {
+  display: inline-block;
+  position: relative;
+  border: 0;
+  background: #0597ff;
+  padding: 1.0em 1.0em;
+  border-radius: 7px;
+  font-weight: bold;
+  color: #fff;
+  transform-style: preserve-3d;
+  transition: transform 0.3s cubic-bezier(0,0,0.58,1),
+  background 0.3s cubic-bezier(0,0,0.58,1);
+  cursor: pointer;
+}
+.button-3d:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #0ea5e9;
+  border-radius: inherit;
+  transform: translate3d(0, 0.5em, -1em);
+  transition: transform 0.3s cubic-bezier(0,0,0.58,1);
+}
+.button-3d:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.25);
+  filter: blur(4px);
+  border-radius: inherit;
+  top: 0;
+  left: 0;
+  transform: translate3d(0, .7em, -1em);
+  transition: transform 0.3s cubic-bezier(0,0,0.58,1);
+}
+.button-3d:hover {
+  transform: translateY(-0.25em);
+}
+.button-3d:hover:before {
+  transform: translate3d(0, 0.75em, -1em);
+}
+.button-3d:hover:after {
+  transform: translate3d(0, 1.05em, -1em);
+}
+.button-3d:active {
+  transform: translate(0, 0.5em);
+}
+.button-3d:active:before,
+.button-3d:active:after {
+  transform: translate3d(0,0,-1em);
 }
