--- a/templates/search.html
+++ b/templates/search.html
@@ -34,7 +34,7 @@
         <h2 style="color: aliceblue;">User</h2>
         <p style="text-align: left; margin-left: 15px; color: aliceblue;">Name: </p>
         <p style="text-align: left; margin-left: 15px; color: aliceblue;">Email: </p>
-        <button>Chat</button>
+        <button class="button-3d">Chat</button>
       </section>
     
       <div class="footer">
