Fixed search funtion

--- a/templates/search.html
+++ b/templates/search.html
@@ -18,29 +18,36 @@
 
 
 <body>
+    <h1>Search</h1>
 
-    <h1>Search for User</h1>
-
-    <!-- You just need to get this field. Start -->
     <script src="https://kit.fontawesome.com/d97b87339f.js" crossorigin="anonymous"></script>
-    
+
     <div class="search-box">
-      <input class="search-input" type="text" placeholder="Search something..">
-      <button class="search-btn"><i class="fas fa-search"></i></button>
-    </div>
-    <!-- You just need to get this field. End -->
-
-    <section>
-        <h2 style="color: aliceblue;">User</h2>
-        <p style="text-align: left; margin-left: 15px; color: aliceblue;">Name: </p>
-        <p style="text-align: left; margin-left: 15px; color: aliceblue;">Email: </p>
-        <button class="button-3d">Chat</button>
-      </section>
-    
-      <div class="footer">
-      
+        <form method="post" action="{% url 'search' %}" style="width: 100%; margin-left: auto; margin-right: auto;">
+            {% csrf_token %}
+                <input class="search-input" type="text" name="username" placeholder="Search for user.." style="width: 83%; margin-left: auto; margin-right: auto;">
+                <button class="search-btn" type="submit" id="searchButton"><i class="fas fa-search"></i></button>
+        </form>
     </div>
 
+    <h2 style="color: aliceblue;">Users</h2>
 
+    <div id="userList">
+        {% if users_profile_list %}
+            {% for profile in users_profile_list %}
+            <section>
+                <p style="text-align: left; margin-left: 15px; color: aliceblue;">Username: {{ profile.user.username }}</p>
+                <p style="text-align: left; margin-left: 15px; color: aliceblue;">Email: {{ profile.user.email }}</p>
+                <button class="button-3d">Chat</button>
+            </section>
+            {% endfor %}
+        {% else %}
+            <p>No users found.</p>
+        {% endif %}
+    </div>
+
+    <div class="footer"></div>
+
+   
 </body>
 </html>
