--- a/static/css/find.css
+++ b/static/css/find.css
@@ -8,7 +8,6 @@ body {
   }
   
   h1 {
-    font-family: 'Montserrat', sans-serif;
     color: #fff;
   }
   
@@ -18,14 +17,14 @@ body {
     width: 350px;
     position: relative;
     display: flex;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
   }
   
   .search-input {
-    
+    width: 100%;
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
     padding: 15px 45px 15px 15px;
@@ -87,3 +86,79 @@ body {
   .footer a:hover {
     color: #eaeaeb;
   }
+
+header,
+section,
+aside,
+footer {
+  margin: 0 1.5% 24px 1.5%;
+}
+section {
+  float: left;
+  width: 20%;
+  border-radius: 18px;
+  box-shadow: 1px 1px 8px 0 grey;
+  margin-top: 90px;
+  background-color: #2b5cd8;
+  height: 210px;
+}
+
+
+.button-3d {
+  display: inline-block;
+  position: relative;
+  border: 0;
+  background: #0597ff;
+  padding: 1.0em 1.0em;
+  border-radius: 7px;
+  font-weight: bold;
+  font-size: 14.5px;
+  color: #fff;
+  transform-style: preserve-3d;
+  transition: transform 0.3s cubic-bezier(0,0,0.58,1),
+    background 0.3s cubic-bezier(0,0,0.58,1);
+  cursor: pointer;
+}
+.button-3d:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #0ea5e9;
+  border-radius: inherit;
+  transform: translate3d(0, 0.5em, -1em);
+  transition: transform 0.3s cubic-bezier(0,0,0.58,1);
+}
+.button-3d:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.25);
+  filter: blur(4px);
+  border-radius: inherit;
+  top: 0;
+  left: 0;
+  transform: translate3d(0, .7em, -1em);
+  transition: transform 0.3s cubic-bezier(0,0,0.58,1);
+}
+.button-3d:hover {
+  transform: translateY(-0.25em);
+}
+.button-3d:hover:before {
+  transform: translate3d(0, 0.75em, -1em);
+}
+.button-3d:hover:after {
+  transform: translate3d(0, 1.05em, -1em);
+}
+.button-3d:active {
+  transform: translate(0, 0.5em);
+}
+.button-3d:active:before,
+.button-3d:active:after {
+  transform: translate3d(0,0,-1em);
+}
