--- a/templates/chat.html
+++ b/templates/chat.html
@@ -16,6 +16,12 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <style>
+        .chat-messages {
+            height: 400px;
+            overflow-y: auto;}
+        </style>
+
 </head>
 
 <body>
@@ -29,66 +35,49 @@
           </div>
         </header>
       
-        <main class="msger-chat">
-          <div class="msg left-msg">
-            <div
-             class="msg-img"
-             style="background-image: url(https://image.flaticon.com/icons/svg/327/327779.svg)"
-            ></div>
-      
-            <div class="msg-bubble">
-              <div class="msg-info">
-                <div class="msg-info-name">BOT</div>
-                <div class="msg-info-time">12:45</div>
-              </div>
-      
-              <div class="msg-text">
-                Hi, welcome to SimpleChat! Go ahead and send me a message. 😄
+        <main class="msger-chat" id="chat-messages-container">
+            {% for message in messages %}
+            {% if message.user.username == request.user.username %}
+            <!-- Right column for the sender's messages -->
+            <div class="msg right-msg">
+              <div class="msg-bubble">
+                <div class="msg-info" id="chat-message">
+                  <div class="msg-info-name">{{ message.user.username }}</div>
+                  <div class="msg-info-time">{{ message.created_at }}</div>
+                </div>
+                <div class="msg-text">
+                  {{ message.content }}
+                </div>
               </div>
             </div>
-          </div>
-      
-          <div class="msg right-msg">
-            <div
-             class="msg-img"
-             style="background-image: url(https://image.flaticon.com/icons/svg/145/145867.svg)"
-            ></div>
-      
-            <div class="msg-bubble">
-              <div class="msg-info" id="chat-messages">
-                <div class="msg-info-name">Sajad</div>
-                <div class="msg-info-time">12:46</div>
-              </div>
-      
-              <div class="msg-text">
-                You can change your name in JS section!
+            {% else %}
+            <!-- Left column for the receiver's messages -->
+            <div class="msg left-msg">
+              <div class="msg-bubble">
+                <div class="msg-info" id="chat-message">
+                  <div class="msg-info-name">{{ message.user.username }}</div>
+                  <div class="msg-info-time">{{ message.created_at }}</div>
+                </div>
+                <div class="msg-text">
+                  {{ message.content }}
+                </div>
               </div>
             </div>
-          </div>
-        </main>
-      
-        <form class="msger-inputarea" method="POST" action="." >
-          <input type="text" class="msger-input" id="chat-message-input" placeholder="Enter your message...">
-          <button type="submit" class="msger-send-btn" id="chat-message-submit">Send</button>
+            {% endif %}
+            {% endfor %}
+          </main>
+        
+        <form class="msger-inputarea" method="POST" action=".">
+            {% csrf_token %}
+            <input type="text" class="msger-input" id="chat-message-input" placeholder="Enter your message...">
+            <button type="submit" class="msger-send-btn" id="chat-message-submit">Send</button>
         </form>
       </section>
 
       {{ room.slug|json_script:"json-roomname" }}
+      {{ request.user.username| json_script:"json-username"}}
 
-      <script>
-          document.addEventListener('DOMContentLoaded', function () {
-              const roomName = JSON.parse(document.getElementById('json-roomname').textContent);
-              const chatSocket = new WebSocket('ws://' + window.location.host + '/ws/' + roomName + '/');
-  
-              chatSocket.onmessage = function (e) {
-                  console.log(e.data); 
-              }
-  
-              chatSocket.onclose = function (e) {
-                  console.log('WebSocket closed');
-              }
-          });
-      </script>
+      <script src="{% static 'js/chat.js' %}"></script>
 
 
 </body>
